sumo/tests/sumo/errors/routes/no_route/errors.sumo
Error: Vehicle '0' has no route.
Quitting (on error).
